src/styles/main.scss
@use "typography.scss" as typography;
@use "sass:color";
@use "sass:meta";
@config "../../tailwind.config.cjs";
@include meta.load-css("tailwindcss");

@layer components {
  @include typography.components;

  .radial-border {
    @include mixins.radial-border(colors.$dark-accent);
  }

  .solid-background {
    @apply w-screen h-auto bg-dark-shades;

    &::before {
      @apply absolute -z-50;

      width: 100vw;
      height: calc(100vh * 0.5);
      background: linear-gradient(
        180deg,
        rgb(0 0 0 / 0%) 0%,
        colors.$dark-shades 50%
      );
      content: "";
    }

    @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
      &::before {
        width: 50vw;
      }
    }

    @supports (-webkit-touch-callout: none) {
      @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
        &::before {
          display: none;
        }
      }
    }
  }

  .acrylic-dark {
    @include mixins.acrylic;
  }

  .acrylic-light {
    @include mixins.acrylic-light;
  }

  .acrylic-white {
    @include mixins.acrylic-white;
  }

  .radial-border-utils {
    content: "";
    inset: 0;
    mask:
      linear-gradient(white 0 0) content-box,
      linear-gradient(white 0 0);
    mask-composite: xor;
    mask-composite: exclude;
  }

  .form-field {
    @apply text-dark-shades focus:ring mb-4 rounded-md border-dark-accent;
    @apply bg-light-shades focus:border-dark-accent focus:ring-light-accent;
    @apply disabled:bg-slate-300 disabled:border-dark-shades;
    @apply disabled:cursor-not-allowed;
  }

  .form-field-error {
    @apply border-danger focus:border-danger focus:ring-danger;
    @apply focus:ring-danger/50;

    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
    background-position: right calc(0.375em + 0.1875rem) center;
    background-repeat: no-repeat;
    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
  }

  .hash-link {
    @apply mr-6 before:invisible hover:before:visible before:text-3xl;
    @apply before:hover:text-light-accent before:active:text-dark-accent;
    @apply active:underline before:content-['#'] before:mr-2;
  }

  .hash-link-left {
    @apply before:invisible hover:before:visible before:text-3xl;
    @apply before:hover:text-light-accent before:active:text-dark-accent;
    @apply active:underline before:content-['#'];
  }

  .hash-link-right {
    @apply after:invisible hover:after:visible after:text-3xl;
    @apply after:hover:text-light-accent after:active:text-dark-accent;
    @apply active:underline after:content-['#'];
  }

  .gradient-background {
    @apply fixed -z-[5] top-1/3 h-2/3 w-screen left-0;

    background: linear-gradient(
      180deg,
      rgb(0 0 0 / 0%) 0%,
      colors.$dark-shades 25%
    );
  }

  // Override react-select styles
  .multi-select {
    // HACK react-select has dynamic styles, so have to match the tree
    > div {
      > :nth-child(3) {
        > :first-child {
          // Selected item
          :not(:last-child) {
            cursor: default;

            // Remove selected item
            :last-child {
              cursor: pointer;
            }
          }

          // Text field
          > :last-child {
            cursor: text;
          }
        }

        > :last-child {
          // Clear filters
          > :first-child {
            > :first-child {
              cursor: pointer;
            }
          }

          // Dropdown toggle
          > :last-child {
            > :first-child {
              cursor: pointer;
              transform: rotate(180deg);
            }
          }
        }
      }

      // Rotate the dropdown toggle icon when open
      > :last-child > :last-child > :last-child > :first-child {
        transform: rotate(0deg);
      }

      // Dropdown menu
      > :nth-child(4) > div > div {
        cursor: pointer;
      }
    }
  }
}

@layer utilities {
  .hyphens {
    hyphens: auto;
  }

  .hyphens-none {
    hyphens: none;
  }

  .scroll-light {
    scrollbar-color: colors.$light-shades
      color.scale(colors.$dark-shades, $alpha: -30%);
  }

  .scroll-dark {
    scrollbar-color: colors.$dark-shades
      color.scale(colors.$light-shades, $alpha: -30%);
  }

  .captcha-show {
    z-index: 99999 !important;
  }
}

@layer base {
  @include typography.base;

  .aurora-background-image {
    position: fixed;
    top: 0;
    left: 0;
    z-index: -100;
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    object-position: top center;
    pointer-events: none;

    @media (width <= 600px) {
      left: 50%;
      width: auto;
      height: 600px;
      transform: translateX(-50%);
    }

    @media (width >= 600px) {
      width: 100vw;
      height: 100vh;
      object-fit: cover;
      transform: none;
    }
  }

  @font-face {
    font-display: swap;
  }

  body {
    @apply font-sans subpixel-antialiased m-0 text-light-shades scroll-smooth;
    @apply bg-dark-shades bg-fixed bg-top bg-no-repeat overflow-x-hidden;

    font-display: swap;
  }

  html {
    // Need scroll padding to offset the fixed header
    @apply scroll-smooth scroll-pt-16;
    overflow-x: clip;
    scrollbar-color: colors.$light-shades
      color.scale(colors.$dark-shades, $alpha: -30%);
  }

  p,
  li,
  h1,
  h2,
  h3,
  h4 {
    @apply mt-0;
  }

  h1,
  h2,
  h3,
  h4 {
    &::before {
      display: inline-block;
      height: 30px;
      margin-top: -30px;
      content: "";
      visibility: hidden;
    }
  }

  svg {
    display: inline-block;
  }

  * {
    box-sizing: border-box;

    // Override browser default focus styles

    &:focus-visible {
      outline: 3px solid colors.$light-accent;
    }

    &::selection {
      background-color: colors.$light-accent;
      color: colors.$dark-shades;
    }
  }

  div {
    input,
    textarea,
    .form-input,
    .form-textarea {
      &::placeholder {
        @apply text-placeholder;
      }
    }
  }

  // Override prismjs styles
  article.prose {
    pre {
      background-color: colors.$inline-code-bg;
      padding: 0 !important;
      div {
        background-color: colors.$inline-code-bg !important;
      }
      code {
        background-color: colors.$inline-code-bg !important;
      }
    }

    // Markdown styles for keyboard keys
    strong {
      code {
        border: 1px solid colors.$inline-code-bg;
        border-bottom: 3px solid colors.$inline-code-bg;
        background-color: colors.$light-shades !important;
        color: colors.$dark-shades !important;
        font-weight: bold;
      }
    }
  }

  @media (prefers-reduced-motion: reduce) {
    *,
    *::before,
    *::after {
      animation-delay: 0 !important;
      animation-duration: 0.01ms !important;
      transition-delay: 0 !important;
      transition-duration: 0.01ms !important;
    }
  }

  // Override library styles
  input[type="text"]:not(.form-field, .form-field-error):focus {
    box-shadow: none;
  }
}

